// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | InfoBar Default usage 1`] = `
.c3 {
  padding-left: 12px;
  padding-top: 4px;
  padding-right: 12px;
  padding-bottom: 4px;
}

.c6 {
  padding-right: 8px;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  box-sizing: border-box;
}

.c8 {
  box-sizing: border-box;
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
}

.c7 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #0046FF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  box-sizing: border-box;
  margin: 0 auto;
}

.c1 {
  background: #FFFFFF;
  color: #282823;
}

.c1 span {
  color: inherit;
}

.c1 a {
  font-weight: bold;
  color: #0046FF;
}

.c1 button {
  background: none;
  border: none;
  cursor: pointer;
}

.c0 {
  background: #f5f5f5;
}

@media (min-width:760px) {
  .c3 {
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media (min-width:760px) {
  .c2 {
    max-width: 760px;
    padding: 0 20px;
  }
}

@media (min-width:976px) {
  .c2 {
    max-width: 976px;
    padding: 0 20px;
  }
}

@media (min-width:1280px) {
  .c2 {
    max-width: 1280px;
    padding: 0 20px;
  }
}

@media (min-width:1600px) {
  .c2 {
    max-width: 1600px;
    padding: 0 20px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6"
            >
              <svg
                aria-hidden="true"
                className="c7"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12,24 C5.372583,24 0,18.627417 0,12 C0,5.372583 5.372583,0 12,0 C18.627417,0 24,5.372583 24,12 C24,18.627417 18.627417,24 12,24 Z"
                />
                <path
                  d="M11,9 L13,9 L13,19 L11,19 L11,9 Z M11,5 L13,5 L13,7 L11,7 L11,5 Z"
                  fill="#FFFFFF"
                />
              </svg>
            </div>
          </div>
          <div
            className="c8"
          >
            <span
              className="c9"
            >
              InfoBar should be used on top of the pages to show Marketing or Customer Support communication messages. Content of the InfoBar is just rendered 
              <code>
                children
              </code>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | InfoBar Different variants 1`] = `
.c3 {
  padding-left: 12px;
  padding-top: 4px;
  padding-right: 12px;
  padding-bottom: 4px;
}

.c6 {
  padding-right: 8px;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  box-sizing: border-box;
}

.c8 {
  box-sizing: border-box;
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
}

.c7 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #0046FF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c11 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c13 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #FFFFFF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c14 {
  fill: #FF1900;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  box-sizing: border-box;
  margin: 0 auto;
}

.c1 {
  background: #FFFFFF;
  color: #282823;
}

.c1 span {
  color: inherit;
}

.c1 a {
  font-weight: bold;
  color: #0046FF;
}

.c1 button {
  background: none;
  border: none;
  cursor: pointer;
}

.c10 {
  background: #FFCF00;
  color: #282823;
}

.c10 span {
  color: inherit;
}

.c10 a {
  font-weight: bold;
  color: #282823;
}

.c10 button {
  background: none;
  border: none;
  cursor: pointer;
}

.c12 {
  background: #FF1900;
  color: #FFFFFF;
}

.c12 span {
  color: inherit;
}

.c12 a {
  font-weight: bold;
  color: #FFFFFF;
}

.c12 button {
  background: none;
  border: none;
  cursor: pointer;
}

.c15 {
  background: #00D200;
  color: #282823;
}

.c15 span {
  color: inherit;
}

.c15 a {
  font-weight: bold;
  color: #282823;
}

.c15 button {
  background: none;
  border: none;
  cursor: pointer;
}

.c0 {
  background: #f5f5f5;
}

@media (min-width:760px) {
  .c3 {
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media (min-width:760px) {
  .c2 {
    max-width: 760px;
    padding: 0 20px;
  }
}

@media (min-width:976px) {
  .c2 {
    max-width: 976px;
    padding: 0 20px;
  }
}

@media (min-width:1280px) {
  .c2 {
    max-width: 1280px;
    padding: 0 20px;
  }
}

@media (min-width:1600px) {
  .c2 {
    max-width: 1600px;
    padding: 0 20px;
  }
}

<div
  className="c0"
>
  <code>
    no variant passed, defaults to general
  </code>
  <br />
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6"
            >
              <svg
                aria-hidden="true"
                className="c7"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12,24 C5.372583,24 0,18.627417 0,12 C0,5.372583 5.372583,0 12,0 C18.627417,0 24,5.372583 24,12 C24,18.627417 18.627417,24 12,24 Z"
                />
                <path
                  d="M11,9 L13,9 L13,19 L11,19 L11,9 Z M11,5 L13,5 L13,7 L11,7 L11,5 Z"
                  fill="#FFFFFF"
                />
              </svg>
            </div>
          </div>
          <div
            className="c8"
          >
            <span
              className="c9"
            >
              We’re currently working on the new main menu. Links marked with arrow icon will redirect you to the previous website experience. 
              <a
                href="#nonce"
              >
                Read more
              </a>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <br />
  <br />
  <code>
    variant=
    general
  </code>
  <br />
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6"
            >
              <svg
                aria-hidden="true"
                className="c7"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12,24 C5.372583,24 0,18.627417 0,12 C0,5.372583 5.372583,0 12,0 C18.627417,0 24,5.372583 24,12 C24,18.627417 18.627417,24 12,24 Z"
                />
                <path
                  d="M11,9 L13,9 L13,19 L11,19 L11,9 Z M11,5 L13,5 L13,7 L11,7 L11,5 Z"
                  fill="#FFFFFF"
                />
              </svg>
            </div>
          </div>
          <div
            className="c8"
          >
            <span
              className="c9"
            >
              We’re currently working on the new main menu. Links marked with arrow icon will redirect you to the previous website experience. 
              <a
                href="#nonce"
              >
                Read more
              </a>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <br />
  <br />
  <code>
    variant=
    warning
  </code>
  <br />
  <div
    className="c10"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6"
            >
              <svg
                aria-hidden="true"
                className="c11"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="12 1 24 23 0 23"
                />
                <path
                  d="M11,10 L13,10 L13,16 L11,16 L11,10 Z M11,17 L13,17 L13,19 L11,19 L11,17 Z"
                  fill="#FFFFFF"
                />
              </svg>
            </div>
          </div>
          <div
            className="c8"
          >
            <span
              className="c9"
            >
              We’re currently working on the new main menu. Links marked with arrow icon will redirect you to the previous website experience. 
              <a
                href="#nonce"
              >
                Read more
              </a>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <br />
  <br />
  <code>
    variant=
    error
  </code>
  <br />
  <div
    className="c12"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6"
            >
              <svg
                aria-hidden="true"
                className="c13"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12,23.8695652 C18.627417,23.8695652 24,18.5553799 24,12 C24,5.44462014 18.627417,0.130434783 12,0.130434783 C5.372583,0.130434783 0,5.44462014 0,12 C0,18.5553799 5.372583,23.8695652 12,23.8695652 Z"
                />
                <polygon
                  className="c14"
                  points="11.492 6.847 11.492 17.137 12.492 17.137 12.492 6.847"
                  transform="rotate(-45 11.992 11.992)"
                />
                <polygon
                  className="c14"
                  points="11.492 6.847 11.492 17.137 12.492 17.137 12.492 6.847"
                  transform="rotate(45 11.992 11.992)"
                />
              </svg>
            </div>
          </div>
          <div
            className="c8"
          >
            <span
              className="c9"
            >
              The US market is currently down, we are fixing it right now. It will soon be back and running. 
              <a
                href="#nonce"
              >
                Read more
              </a>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <br />
  <br />
  <code>
    variant=
    success
  </code>
  <br />
  <div
    className="c15"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6"
            >
              <svg
                aria-hidden="true"
                className="c11"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12,23.8695652 C18.627417,23.8695652 24,18.5553799 24,12 C24,5.44462014 18.627417,0.130434783 12,0.130434783 C5.372583,0.130434783 0,5.44462014 0,12 C0,18.5553799 5.372583,23.8695652 12,23.8695652 Z"
                />
                <polygon
                  fill="#FFF"
                  points="16.474 8.87 17.407 9.797 11 16.174 7.121 12.313 8.053 11.385 11 14.318"
                />
              </svg>
            </div>
          </div>
          <div
            className="c8"
          >
            <span
              className="c9"
            >
              We have fixed the US market issue. It is now back to service. 
              <a
                href="#nonce"
              >
                Read more
              </a>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <br />
  <br />
</div>
`;

exports[`Storyshots Molecules | InfoBar onClose prop demo 1`] = `
.c3 {
  padding-left: 12px;
  padding-top: 4px;
  padding-right: 12px;
  padding-bottom: 4px;
}

.c6 {
  padding-right: 8px;
}

.c11 {
  padding-left: 8px;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  box-sizing: border-box;
}

.c8 {
  box-sizing: border-box;
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
}

.c10 {
  box-sizing: border-box;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c7 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #0046FF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c12 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  box-sizing: border-box;
  margin: 0 auto;
}

.c1 {
  background: #FFFFFF;
  color: #282823;
}

.c1 span {
  color: inherit;
}

.c1 a {
  font-weight: bold;
  color: #0046FF;
}

.c1 button {
  background: none;
  border: none;
  cursor: pointer;
}

.c0 {
  background: #f5f5f5;
}

@media (min-width:760px) {
  .c3 {
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media (min-width:760px) {
  .c2 {
    max-width: 760px;
    padding: 0 20px;
  }
}

@media (min-width:976px) {
  .c2 {
    max-width: 976px;
    padding: 0 20px;
  }
}

@media (min-width:1280px) {
  .c2 {
    max-width: 1280px;
    padding: 0 20px;
  }
}

@media (min-width:1600px) {
  .c2 {
    max-width: 1600px;
    padding: 0 20px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6"
            >
              <svg
                aria-hidden="true"
                className="c7"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12,24 C5.372583,24 0,18.627417 0,12 C0,5.372583 5.372583,0 12,0 C18.627417,0 24,5.372583 24,12 C24,18.627417 18.627417,24 12,24 Z"
                />
                <path
                  d="M11,9 L13,9 L13,19 L11,19 L11,9 Z M11,5 L13,5 L13,7 L11,7 L11,5 Z"
                  fill="#FFFFFF"
                />
              </svg>
            </div>
          </div>
          <div
            className="c8"
          >
            <span
              className="c9"
            >
              Without onClose prop InfoBar cannot be dismissed
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <br />
  <br />
  <br />
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6"
            >
              <svg
                aria-hidden="true"
                className="c7"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12,24 C5.372583,24 0,18.627417 0,12 C0,5.372583 5.372583,0 12,0 C18.627417,0 24,5.372583 24,12 C24,18.627417 18.627417,24 12,24 Z"
                />
                <path
                  d="M11,9 L13,9 L13,19 L11,19 L11,9 Z M11,5 L13,5 L13,7 L11,7 L11,5 Z"
                  fill="#FFFFFF"
                />
              </svg>
            </div>
          </div>
          <div
            className="c8"
          >
            <span
              className="c9"
            >
              With onClose prop InfoBar can be dismissed, but ParentComponent is in charge to react and actually hide the InfoBar.
            </span>
          </div>
          <div
            className="c10"
          >
            <div
              className="c11"
            >
              <button
                onClick={[Function]}
                type="button"
              >
                <svg
                  aria-hidden="true"
                  className="c12"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <polygon
                    points="15.739 12 24 20.062 19.969 24 12 16.223 4.031 24 0 20.062 8.261 12 0 3.938 4.031 0 12 7.777 19.969 0 24 3.938"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
